Angular: Fix new group and top bar overlap

--- a/frontend/web/src/app/components/group-manager/group-manager.component.css
+++ b/frontend/web/src/app/components/group-manager/group-manager.component.css
@@ -38,6 +38,7 @@ a {
   width: 50%;
 }
 .createGroupDiv {
+  padding-top: 48px;
   width: 20%;
 }
 
